--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1299,6 +1299,8 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
          # declare the prereq of this module
          setEnvLoadedModuleProperty $modname prereq [getLoadedPrereq\
             $modname]
+         setEnvLoadedModuleProperty $modname prereqpath [getLoadedPrereqPath\
+            $modname]
 
          # declare the alternative names of this module
          setEnvLoadedModuleProperty $modname altname [getLoadedAltname\
@@ -1674,6 +1676,8 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
          # unset prereq declared for this module
          unsetEnvLoadedModuleProperty $modname prereq
          unsetLoadedPrereq $modname
+         unsetEnvLoadedModuleProperty $modname prereqpath
+         unsetLoadedPrereqPath $modname
 
          # unset alternative names declared for this module
          unsetEnvLoadedModuleProperty $modname altname
