Use requirement modpath info to compute dependencies
Use the modulepath-specific property of the requirements to correctly
compute module dependencies. Especially to determine if a loaded or
loading module is an actual dependency of another module.

g_unmetDepHash array structure is updated to hold the specific
modulepath list next to the loaded module name.

Split isLoadedMatchSpecificPath to create isModulefileMatchSpecificPath
procedure. Useful when working on a *not-yet loaded* context.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1540,12 +1540,16 @@ proc getLoadedMatchingName {name {behavior {}} {loading 0} {lmlist {}}\
 # return if loaded (or loading) module is part of modulepath from specified
 # constrained list
 proc isLoadedMatchSpecificPath {mod modulepath_list loading} {
+   if {$loading} {
+      set mod_file [getModulefileFromLoadingModule $mod]
+   } else {
+      set mod_file [getModulefileFromLoadedModule $mod]
+   }
+   return [isModulefileMatchSpecificPath $mod_file $modulepath_list]
+}
+
+proc isModulefileMatchSpecificPath {mod_file modulepath_list} {
    if {[llength $modulepath_list]} {
-      if {$loading} {
-         set mod_file [getModulefileFromLoadingModule $mod]
-      } else {
-         set mod_file [getModulefileFromLoadedModule $mod]
-      }
       return [isModulefileInModulepathList $mod_file $modulepath_list]
    } else {
       return 1
@@ -2050,13 +2054,15 @@ proc setModuleDependency {mod} {
    set depnpolist {}
 
    foreach prereq [getLoadedPrereq $mod] {
+      set prereq_path_list [getLoadedPrereqPath $mod $prereq]
       # get corresponding loaded module for each element of the prereq order
       set lmprelist {}
       set lmnpolist {}
       foreach modpre $prereq {
          set lmfound {}
          foreach lmmod $modlist {
-            if {[modEq $modpre $lmmod eqstart 1 2 1]} {
+            if {[isLoadedMatchSpecificPath $lmmod $prereq_path_list 0] &&\
+               [modEq $modpre $lmmod eqstart 1 2 1]} {
                set lmfound $lmmod
                break
             }
@@ -2066,7 +2072,7 @@ proc setModuleDependency {mod} {
          if {$lmfound eq {}} {
             reportDebug "set an unmet requirement on '$modpre' for '$mod'"
             lappend ::g_moduleUnmetDep($mod) $modpre
-            lappend ::g_unmetDepHash($modpre) $mod
+            lappend ::g_unmetDepHash($modpre) $mod $prereq_path_list
          # add matching mod elsewhere
          } else {
             appendNoDupToList lmprelist $lmfound
@@ -2075,7 +2081,8 @@ proc setModuleDependency {mod} {
 
          # look if requirement can be found in the No Particular Order list
          foreach lmmod $modnpolist {
-            if {[modEq $modpre $lmmod eqstart 1 2 1]} {
+            if {[isLoadedMatchSpecificPath $lmmod $prereq_path_list 0] &&\
+               [modEq $modpre $lmmod eqstart 1 2 1]} {
                appendNoDupToList lmnpolist $lmmod
                break
             }
@@ -2136,7 +2143,10 @@ proc setModuleDependency {mod} {
    foreach modpre [array names ::g_unmetDepHash] {
       if {[modEq $modpre $mod eqstart 1 2 1]} {
          reportDebug "refresh requirements targeting '$modpre'"
-         foreach lmmod $::g_unmetDepHash($modpre) {
+         foreach {lmmod prereq_path_list} $::g_unmetDepHash($modpre) {
+            if {![isLoadedMatchSpecificPath $mod $prereq_path_list 0]} {
+               continue
+            }
             if {$mod in [getDependentLoadedModuleList [list $lmmod] 0 0]} {
                reportDebug "skip deps refresh for '$lmmod' as dep cycle\
                   detected with '$mod'"
@@ -2266,8 +2276,9 @@ proc unsetModuleDependency {mod} {
    if {[info exists ::g_moduleUnmetDep($mod)]} {
       foreach ummod $::g_moduleUnmetDep($mod) {
          if {[info exists ::g_unmetDepHash($ummod)]} {
-            set ::g_unmetDepHash($ummod) [replaceFromList\
-               $::g_unmetDepHash($ummod) $mod]
+            set idx [lsearch -exact $::g_unmetDepHash($ummod) $mod]
+            set ::g_unmetDepHash($ummod) [lreplace $::g_unmetDepHash($ummod)\
+               $idx $idx+1]
             if {![llength $::g_unmetDepHash($ummod)]} {
                unset ::g_unmetDepHash($ummod)
             }
