--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1231,7 +1231,8 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
 
             # get loaded modules holding a requirement on modname and able to
             # be reloaded
-            set depre_list [getUnmetDependentLoadedModuleList $modnamevr]
+            set depre_list [getUnmetDependentLoadedModuleList $modnamevr\
+               $modfile]
             reportDebug "depre mod list is '$depre_list'"
 
             if {[isTopEvaluation]} {
