--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1629,7 +1629,7 @@ proc getLoadedConflict {mod} {
    }
 }
 
-proc getModuleLoadedConflict {mod} {
+proc getModuleLoadedConflict {mod {modulepath_list {}}} {
    set mod_con_list {}
    defineModEqProc [isIcase] [getConf extended_default] 1
    # get module short name if loaded by its full pathname
@@ -1667,7 +1667,8 @@ proc getModuleLoadedConflict {mod} {
       }
    }
 
-   if {[isOtherVariantOfModuleLoaded $mod]} {
+   if {[isOtherVariantOfModuleLoaded $mod] || ([isModuleLoaded $mod] &&\
+      ![isLoadedMatchSpecificPath $mod $modulepath_list 0])} {
       lappend mod_con_list [getModuleNameAndVersFromVersSpec $mod]
    }
 
