--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1168,8 +1168,9 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
          if {$isloaded || $isloading} {
             # stop if same mod is loaded but from a modulepath not part of
             # constrained list
-            if {![isLoadedMatchSpecificPath $modname $modulepath_list [expr\
-               {!$isloaded}]]} {
+            if {($isloaded && ![isLoadedMatchSpecificPath $modname\
+               $modulepath_list]) || ($isloading &&\
+               ![isLoadingMatchSpecificPath $modname $modulepath_list])} {
                # no error if ConUn mechanism handles unload of this module
                if {![getConf auto_handling] || ![getConf conflict_unload] ||\
                   $isloading} {
