--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -2,7 +2,7 @@
 %global vimdatadir %{_datadir}/vim/vimfiles
 
 Name:           environment-modules
-Version:        5.4.0
+Version:        5.5.0
 Release:        @MODULES_RPM_RELEASE@%{?dist}
 Summary:        Provides dynamic modification of a user's environment
 
@@ -245,6 +245,10 @@ fi
 
 
 %changelog
+* Mon Nov 11 2024 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.5.0-1
+- Update to 5.5.0
+- Require util-linux-core to get logger command for logging capabilities
+
 * Tue Feb 20 2024 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.4.0-1
 - Update to 5.4.0
 - Move modulefile man page to section 5
