--- a/share/rpm/environment-modules.spec.in
+++ b/share/rpm/environment-modules.spec.in
@@ -157,7 +157,7 @@ mv {doc/build/,}INSTALL.txt
 mv {doc/build/,}changes.txt
 
 # install the rpm config file
-install -Dpm 644 contrib/rpm/macros.%{name} %{buildroot}/%{macrosdir}/macros.%{name}
+install -Dpm 644 share/rpm/macros.%{name} %{buildroot}/%{macrosdir}/macros.%{name}
 
 
 %check
@@ -354,7 +354,7 @@ fi
 - Set etc directory to /etc/environment-modules and move in it configuration
   files previously installed in init directory. modulerc and .modulespath
   files in init directory respectively become initrc and modulespath in etc
-  directory (bug #1506663) 
+  directory (bug #1506663)
 
 * Mon Jul 08 2019 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 4.2.5-1
 - Update to 4.2.5
